--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="get_started">GET STARTED</string>
+    <string name="todo">Pozadinska1</string>
 </resources>
