DrugiDan drugi Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Swoosh</string>
     <string name="get_started">GET STARTED</string>
     <string name="todo">Pozadinska1</string>
+    <string name="Swoosh1">SwooshLogic</string>
+    <string name="Swoosh2">SwooshLogic2</string>
 </resources>
